--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -83,7 +83,10 @@ animation: textgrowth 1s infinite alternate;
     transform: rotate(3deg);
 }
 }
-
+#buttable {
+    padding-left: 40%;
+    padding-right: 40%;
+}
 .butttt
 {
     opacity:0.5;
@@ -174,6 +177,18 @@ li {
 }
 .takkii {
     display: none;
+}
+table#table {
+    width: 100%;
+    height: 100%;
+    background-color: #bebebe;
+}
+table#table tr{
+    background-color: gray;
+}
+table#table th {
+    color: black;
+    background-color: #ffffb1;
 }
 }
 @import 'layout', 'icomoon','socialButts';
